# model/auth_model.go
@@ -1,5 +1,7 @@
 package model
 
+// Auth Token response model
+// @Description Access token generated from user and password
 type AuthToken struct {
 	Token string `json:"token"`
 }
